Fix Whitespace Handling
Add {white-space: pre;} to text elements

--- a/signboardStyles.css
+++ b/signboardStyles.css
@@ -39,6 +39,7 @@
             position: absolute;
             left: 0.8%;
             text-shadow: 0px 0px 2vh #ff8c00;
+            white-space: pre;
         }
         
         /* Text Input Vertical Positioning */ 
